k8s/api-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: iot-backend
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
